# soyyo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
soyyo/: __init__.py  acciones.py  acciones.pyi  app.py  app.pyi  auxiliares.py  auxiliares.pyi  constantes.py  constantes.pyi  errores.py  errores.pyi  estados.py  estados.pyi  mensajes.py  mensajes.pyi
soyyo/doc/: diagrama_de_estados.md
soyyo/locales/es/LC_MESSAGES/: messages.mo  messages.po
test/: conftest.py  fixtures.py  test_acciones.py  test_app.py  test_auxiliares.py
