[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'soyyo'
description = 'Un programa TOTP'
requires-python = '>=3.10'
authors = [
    { name = 'Miguel Sánchez', email = 'miguel@mariaonline.org' },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
dynamic = ['dependencies', 'readme', 'optional-dependencies']
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/misanram/soyyo"

[tool.setuptools.dynamic]
readme = { file = ['README.md', ] }
dependencies = { file = 'requirements.txt' }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["dev-requirements.txt"] }

[tool.setuptools.packages.find]
include = ["soyyo*"]
where = ["."]

[project.scripts]
soyyo = "soyyo.app:main"

